# plzplz

./: .gitignore  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  package.json  plz.toml  pyproject.toml  release-plz.toml
.github/workflows/: ci.yml  docs.yml  pypi.yml  release-plz.yml
docs/: getting-started.md  index.md  reference.md
docs/.vitepress/: config.ts
schema/: plz.schema.json
src/: cheatsheet.txt  config.rs  environments.toml  hooks.rs  init.rs  lib.rs  main.rs  runner.rs  settings.rs  update_check.rs  utils.rs
src/healthcheck/: check_case_conflict.rs  check_large_files.rs  check_merge_conflict.rs  detect_private_key.rs  end_of_file.rs  mixed_line_ending.rs  mod.rs  trailing_whitespace.rs
src/snippets/: general.toml  npm.snippets.toml  npm.toml  pnpm.snippets.toml  pnpm.toml  rust.snippets.toml  uv.snippets.toml  uv.toml
src/templates/: general.plz.toml  mod.rs  npm.plz.toml  pnpm.plz.toml  rust.plz.toml  uv.plz.toml  vite.plz.toml
tests/: integration.rs
