[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "plzplz"
description = "A simple cross-platform task runner with helpful defaults"
license = "MIT"
requires-python = ">=3.12"
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/k88hudson/plzplz"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
